add files of web devlopment

--- a/akshit.html
+++ b/akshit.html
@@ -7,7 +7,12 @@
 
 </head>
 
-<body>
+<body style="background-color:#3EC1D3;">
+
+
+
+
+
   <center>
     <hr size="5" noshade
     <hr color="red"
@@ -42,7 +47,7 @@
     MY name Is Akshit
   </li>
 </ul>
-<table border="5 " , cellspacing = "15">
+<table border="5 " , cellspacing = "15" , >
   <th>
 
     CoursesCurve
